probando el responsive

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,8 @@
             <a href="/clientes">Clientes</a>
             <a href="/estadisticas">Estadísticas</a>
             <a href="/servicios">Mis Servicios</a> 
+            <a href="/horarios">Mi Horario</a> 
+            <a href="/configuracion_publica">Calendario Publico</a>
             <a href="/logout">Cerrar Sesión</a>
         </div>
         
